Revision history for perl distribution Convos

6.46 Not Released
 - Fix joining already joined conversations
 - Using WHOIS instead of ISON to check if a user is online

6.45 2021-12-27T22:17:00+0900
 - Add "Check for updates" button to Settings page #585
 - Trying to fix connect queue issues with Convos::Util::Queue
   * Removed connect queue logic from Convos::Core
 - Removed "queued" connection state
 - Changing the connection URL username or password will also cause a reconnect

6.44 2021-12-23T16:17:00+0900
 - Fix SASL EXTERNAL authentication

6.43 2021-12-23T14:29:00+0900
 - Add certificate fingerprint to connection form, when chosing "SASL External"
 - Add support for quotes around **bold**
 - Add is_true() function to check boolean environment variables
   for "0", "Off", "No", "false", "1", "On", "Yes" or "true".
 - Changed default SASL username to nick
 - Setting CONVOS_SYSLOG=1 will disable logging to file
 - Stop replacing " (quote) with &quot;

6.42 2021-12-21T10:00:00+0900
 - Fix resetting reconnect delay when manually updating connection settings
 - Fix not changing wanted state to "disconnected" when updating connection settings
 - Fix double line breaks inside <pre> in the CMS by changing to Text::Markdown::Hoedown
 - Fix not adding space before channel name links
 - Avoid making #123 turn into channel links, since they are often pull request numbers

6.41 2021-12-18T14:58:00+0900
 - Add support for CONVOS_ACCESS_LOG (EXPERIMENTAL)
   https://github.com/jhthorsen/mojolicious-plugin-syslog#register
 - Add support for CONVOS_SYSLOG (EXPERIMENTAL)

6.40 2021-12-13T22:32:00+0900
 - Add clear search button #631
 - Add CSRF-check to /logout #632
   Contributors: Devendra Bhatla and Jamie Slome

6.39 2021-11-27T08:50:00+0900
 - Add file management to frontend #426
 - Add GET /files endpoint #426
 - Add DELETE /files/:uid/:fid endpoint #426

6.38 2021-11-26T08:46:00+0900
 - Use Crypt::Passphrase for password hashing #627
   Contributor: Stig Palmquist